@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- fix behavior of Linux Steam launcher on systems that don't support the inotify API
 
 ## Misc Improvements
 
